// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`built CLI end-to-end > renders the Obsidian-vault-style fixture (wikilinks, embeds, callouts, highlights) to self-contained HTML 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>example-obsidian</title>
  <meta name="description" content="" />
  <style>
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root, :host {
    --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
      "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
      "Segoe UI Symbol", "Noto Color Emoji";
    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --color-neutral-100: oklch(97% 0 none);
    --color-neutral-200: oklch(92.2% 0 none);
    --color-neutral-300: oklch(87% 0 none);
    --color-neutral-400: oklch(70.8% 0 none);
    --color-neutral-500: oklch(55.6% 0 none);
    --color-neutral-600: oklch(43.9% 0 none);
    --color-neutral-700: oklch(37.1% 0 none);
    --spacing: 0.25rem;
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
  }
}
@layer base {
  *, ::after, ::before, ::backdrop, ::file-selector-button {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0 solid;
  }
  html, :host {
    line-height: 1.5;
    -webkit-text-size-adjust: 100%;
    tab-size: 4;
    font-family: var(--default-font-family, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
    font-feature-settings: var(--default-font-feature-settings, normal);
    font-variation-settings: var(--default-font-variation-settings, normal);
    -webkit-tap-highlight-color: transparent;
  }
  hr {
    height: 0;
    color: inherit;
    border-top-width: 1px;
  }
  abbr:where([title]) {
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
  }
  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
  }
  a {
    color: inherit;
    -webkit-text-decoration: inherit;
    text-decoration: inherit;
  }
  b, strong {
    font-weight: bolder;
  }
  code, kbd, samp, pre {
    font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
    font-feature-settings: var(--default-mono-font-feature-settings, normal);
    font-variation-settings: var(--default-mono-font-variation-settings, normal);
    font-size: 1em;
  }
  small {
    font-size: 80%;
  }
  sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  sub {
    bottom: -0.25em;
  }
  sup {
    top: -0.5em;
  }
  table {
    text-indent: 0;
    border-color: inherit;
    border-collapse: collapse;
  }
  :-moz-focusring:where(:not(iframe)) {
    outline: auto;
  }
  progress {
    vertical-align: baseline;
  }
  summary {
    display: list-item;
  }
  ol, ul, menu {
    list-style: none;
  }
  img, svg, video, canvas, audio, iframe, embed, object {
    display: block;
    vertical-align: middle;
  }
  img, video {
    max-width: 100%;
    height: auto;
  }
  button, input, select, optgroup, textarea, ::file-selector-button {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    border-radius: 0;
    background-color: transparent;
    opacity: 1;
  }
  :where(select:is([multiple], [size])) optgroup {
    font-weight: bolder;
  }
  :where(select:is([multiple], [size])) optgroup option {
    padding-inline-start: 20px;
  }
  ::file-selector-button {
    margin-inline-end: 4px;
  }
  ::placeholder {
    opacity: 1;
  }
  @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
    ::placeholder {
      color: currentcolor;
      @supports (color: color-mix(in lab, red, red)) {
        color: color-mix(in oklab, currentcolor 50%, transparent);
      }
    }
  }
  textarea {
    resize: vertical;
  }
  ::-webkit-search-decoration {
    -webkit-appearance: none;
  }
  ::-webkit-date-and-time-value {
    min-height: 1lh;
    text-align: inherit;
  }
  ::-webkit-datetime-edit {
    display: inline-flex;
  }
  ::-webkit-datetime-edit-fields-wrapper {
    padding: 0;
  }
  ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
    padding-block: 0;
  }
  ::-webkit-calendar-picker-indicator {
    line-height: 1;
  }
  :-moz-ui-invalid {
    box-shadow: none;
  }
  button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
    appearance: button;
  }
  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
    height: auto;
  }
  [hidden]:where(:not([hidden="until-found"])) {
    display: none !important;
  }
}
@layer utilities {
  .mx-auto {
    margin-inline: auto;
  }
  .prose {
    color: var(--tw-prose-body);
    max-width: 65ch;
    :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
      margin-bottom: 1.25em;
    }
    :where([class~="lead"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-lead);
      font-size: 1.25em;
      line-height: 1.6;
      margin-top: 1.2em;
      margin-bottom: 1.2em;
    }
    :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-links);
      text-decoration: underline;
      font-weight: 500;
    }
    :where(strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-bold);
      font-weight: 600;
    }
    :where(a strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(blockquote strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(thead th strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(ol):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: decimal;
      margin-top: 1.25em;
      margin-bottom: 1.25em;
      padding-inline-start: 1.625em;
    }
    :where(ol[type="A"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-alpha;
    }
    :where(ol[type="a"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-alpha;
    }
    :where(ol[type="A" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-alpha;
    }
    :where(ol[type="a" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-alpha;
    }
    :where(ol[type="I"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-roman;
    }
    :where(ol[type="i"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-roman;
    }
    :where(ol[type="I" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-roman;
    }
    :where(ol[type="i" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-roman;
    }
    :where(ol[type="1"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: decimal;
    }
    :where(ul):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: disc;
      margin-top: 1.25em;
      margin-bottom: 1.25em;
      padding-inline-start: 1.625em;
    }
    :where(ol > li):not(:where([class~="not-prose"], [class~="not-prose"] *))::marker {
      font-weight: 400;
      color: var(--tw-prose-counters);
    }
    :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *))::marker {
      color: var(--tw-prose-bullets);
    }
    :where(dt):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      margin-top: 1.25em;
    }
    :where(hr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-color: var(--tw-prose-hr);
      border-top-width: 1px;
      margin-top: 3em;
      margin-bottom: 3em;
    }
    :where(blockquote):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 500;
      font-style: italic;
      color: var(--tw-prose-quotes);
      border-inline-start-width: 0.25rem;
      border-inline-start-color: var(--tw-prose-quote-borders);
      quotes: "\\201C""\\201D""\\2018""\\2019";
      margin-top: 1.6em;
      margin-bottom: 1.6em;
      padding-inline-start: 1em;
    }
    :where(blockquote p:first-of-type):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: open-quote;
    }
    :where(blockquote p:last-of-type):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: close-quote;
    }
    :where(h1):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 800;
      font-size: 2.25em;
      margin-top: 0;
      margin-bottom: 0.8888889em;
      line-height: 1.1111111;
    }
    :where(h1 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 900;
      color: inherit;
    }
    :where(h2):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 700;
      font-size: 1.5em;
      margin-top: 2em;
      margin-bottom: 1em;
      line-height: 1.3333333;
    }
    :where(h2 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 800;
      color: inherit;
    }
    :where(h3):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      font-size: 1.25em;
      margin-top: 1.6em;
      margin-bottom: 0.6em;
      line-height: 1.6;
    }
    :where(h3 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 700;
      color: inherit;
    }
    :where(h4):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      margin-top: 1.5em;
      margin-bottom: 0.5em;
      line-height: 1.5;
    }
    :where(h4 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 700;
      color: inherit;
    }
    :where(img):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(picture):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      display: block;
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(video):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(kbd):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 500;
      font-family: inherit;
      color: var(--tw-prose-kbd);
      box-shadow: 0 0 0 1px var(--tw-prose-kbd-shadows), 0 3px 0 var(--tw-prose-kbd-shadows);
      font-size: 0.875em;
      border-radius: 0.3125rem;
      padding-top: 0.1875em;
      padding-inline-end: 0.375em;
      padding-bottom: 0.1875em;
      padding-inline-start: 0.375em;
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-code);
      font-weight: 600;
      font-size: 0.875em;
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: "\`";
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: "\`";
    }
    :where(a code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(h1 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(h2 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
      font-size: 0.875em;
    }
    :where(h3 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
      font-size: 0.9em;
    }
    :where(h4 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(blockquote code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(thead th code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(pre):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-pre-code);
      background-color: var(--tw-prose-pre-bg);
      overflow-x: auto;
      font-weight: 400;
      font-size: 0.875em;
      line-height: 1.7142857;
      margin-top: 1.7142857em;
      margin-bottom: 1.7142857em;
      border-radius: 0.375rem;
      padding-top: 0.8571429em;
      padding-inline-end: 1.1428571em;
      padding-bottom: 0.8571429em;
      padding-inline-start: 1.1428571em;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      background-color: transparent;
      border-width: 0;
      border-radius: 0;
      padding: 0;
      font-weight: inherit;
      color: inherit;
      font-size: inherit;
      font-family: inherit;
      line-height: inherit;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: none;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: none;
    }
    :where(table):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      width: 100%;
      table-layout: auto;
      margin-top: 2em;
      margin-bottom: 2em;
      font-size: 0.875em;
      line-height: 1.7142857;
    }
    :where(thead):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 1px;
      border-bottom-color: var(--tw-prose-th-borders);
    }
    :where(thead th):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      vertical-align: bottom;
      padding-inline-end: 0.5714286em;
      padding-bottom: 0.5714286em;
      padding-inline-start: 0.5714286em;
    }
    :where(tbody tr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 1px;
      border-bottom-color: var(--tw-prose-td-borders);
    }
    :where(tbody tr:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 0;
    }
    :where(tbody td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      vertical-align: baseline;
    }
    :where(tfoot):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-top-width: 1px;
      border-top-color: var(--tw-prose-th-borders);
    }
    :where(tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      vertical-align: top;
    }
    :where(th, td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      text-align: start;
    }
    :where(figure > *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
      margin-bottom: 0;
    }
    :where(figcaption):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-captions);
      font-size: 0.875em;
      line-height: 1.4285714;
      margin-top: 0.8571429em;
    }
    --tw-prose-body: oklch(37.3% 0.034 259.733);
    --tw-prose-headings: oklch(21% 0.034 264.665);
    --tw-prose-lead: oklch(44.6% 0.03 256.802);
    --tw-prose-links: oklch(21% 0.034 264.665);
    --tw-prose-bold: oklch(21% 0.034 264.665);
    --tw-prose-counters: oklch(55.1% 0.027 264.364);
    --tw-prose-bullets: oklch(87.2% 0.01 258.338);
    --tw-prose-hr: oklch(92.8% 0.006 264.531);
    --tw-prose-quotes: oklch(21% 0.034 264.665);
    --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
    --tw-prose-captions: oklch(55.1% 0.027 264.364);
    --tw-prose-kbd: oklch(21% 0.034 264.665);
    --tw-prose-kbd-shadows: color-mix(in oklab, oklch(21% 0.034 264.665) 10%, transparent);
    --tw-prose-code: oklch(21% 0.034 264.665);
    --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
    --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
    --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
    --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
    --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
    --tw-prose-invert-headings: #fff;
    --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-links: #fff;
    --tw-prose-invert-bold: #fff;
    --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
    --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
    --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
    --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
    --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-kbd: #fff;
    --tw-prose-invert-kbd-shadows: rgb(255 255 255 / 10%);
    --tw-prose-invert-code: #fff;
    --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
    --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
    --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
    --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
    font-size: 1rem;
    line-height: 1.75;
    :where(picture > img):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
      margin-bottom: 0;
    }
    :where(li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.5em;
      margin-bottom: 0.5em;
    }
    :where(ol > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0.375em;
    }
    :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0.375em;
    }
    :where(.prose > ul > li p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.75em;
      margin-bottom: 0.75em;
    }
    :where(.prose > ul > li > p:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
    }
    :where(.prose > ul > li > p:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 1.25em;
    }
    :where(.prose > ol > li > p:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
    }
    :where(.prose > ol > li > p:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 1.25em;
    }
    :where(ul ul, ul ol, ol ul, ol ol):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.75em;
      margin-bottom: 0.75em;
    }
    :where(dl):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
      margin-bottom: 1.25em;
    }
    :where(dd):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.5em;
      padding-inline-start: 1.625em;
    }
    :where(hr + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h2 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h3 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h4 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(thead th:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0;
    }
    :where(thead th:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-end: 0;
    }
    :where(tbody td, tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-top: 0.5714286em;
      padding-inline-end: 0.5714286em;
      padding-bottom: 0.5714286em;
      padding-inline-start: 0.5714286em;
    }
    :where(tbody td:first-child, tfoot td:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0;
    }
    :where(tbody td:last-child, tfoot td:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-end: 0;
    }
    :where(figure):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(.prose > :last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 0;
    }
  }
  .block {
    display: block;
  }
  .flex {
    display: flex;
  }
  .max-w-\\[44rem\\] {
    max-width: 44rem;
  }
  .max-w-\\[72rem\\] {
    max-width: 72rem;
  }
  .max-w-none {
    max-width: none;
  }
  .min-w-0 {
    min-width: 0px;
  }
  .flex-1 {
    flex: 1;
  }
  .flex-col {
    flex-direction: column;
  }
  .gap-8 {
    gap: calc(var(--spacing) * 8);
  }
  .border-t {
    border-top-style: var(--tw-border-style);
    border-top-width: 1px;
  }
  .border-b-4 {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 4px;
  }
  .border-\\[var\\(--color-neutral-300\\)\\] {
    border-color: var(--color-neutral-300);
  }
  .border-\\[var\\(--color-primary-600\\)\\] {
    border-color: var(--color-primary-600);
  }
  .bg-\\[var\\(--color-tertiary-900\\)\\] {
    background-color: var(--color-tertiary-900);
  }
  .p-8 {
    padding: calc(var(--spacing) * 8);
  }
  .px-8 {
    padding-inline: calc(var(--spacing) * 8);
  }
  .py-12 {
    padding-block: calc(var(--spacing) * 12);
  }
  .pt-8 {
    padding-top: calc(var(--spacing) * 8);
  }
  .pb-6 {
    padding-bottom: calc(var(--spacing) * 6);
  }
  .text-center {
    text-align: center;
  }
  .text-\\[0\\.8rem\\] {
    font-size: 0.8rem;
  }
  .text-\\[var\\(--color-neutral-000\\)\\] {
    color: var(--color-neutral-000);
  }
  .text-\\[var\\(--color-neutral-600\\)\\] {
    color: var(--color-neutral-600);
  }
  @media (width >= 48rem) {
    .md\\:sticky {
      position: sticky;
    }
    .md\\:top-8 {
      top: calc(var(--spacing) * 8);
    }
    .md\\:max-h-\\[calc\\(100vh-4rem\\)\\] {
      max-height: calc(100vh - 4rem);
    }
    .md\\:w-56 {
      width: calc(var(--spacing) * 56);
    }
    .md\\:shrink-0 {
      flex-shrink: 0;
    }
    .md\\:grow-0 {
      flex-grow: 0;
    }
    .md\\:basis-56 {
      flex-basis: calc(var(--spacing) * 56);
    }
    .md\\:flex-row {
      flex-direction: row;
    }
    .md\\:items-start {
      align-items: flex-start;
    }
    .md\\:overflow-y-auto {
      overflow-y: auto;
    }
  }
}
:root {
  --color-background: #ffffff;
  --color-text: #1b242d;
  --color-neutral-000: #ffffff;
  --color-neutral-100: #f8fafb;
  --color-neutral-200: #f0f3f6;
  --color-neutral-300: #dbe0e6;
  --color-neutral-400: #cad1d8;
  --color-neutral-500: #b3bdc7;
  --color-neutral-600: #7c8a98;
  --color-neutral-700: #576575;
  --color-neutral-1000: #0f1419;
  --color-primary-100: #f2fbfd;
  --color-primary-400: #90dfef;
  --color-primary-600: #0c7e96;
  --color-secondary-400: #ffd88a;
  --color-secondary-500: #fec757;
  --color-secondary-600: #ffb733;
  --color-secondary-1000: #2b251c;
  --color-tertiary-400: #a2d0e6;
  --color-tertiary-500: #6bb9e1;
  --color-tertiary-700: #066b9d;
  --color-tertiary-900: #023e5c;
  --color-information-100: #f2fbfd;
  --color-information-300: #c5edf6;
  --color-information-800: #034e5e;
  --color-success-100: #f1f9f3;
  --color-success-300: #ccf0d7;
  --color-success-800: #006629;
  --color-alert-100: #fcf5ee;
  --color-alert-300: #fae0c2;
  --color-alert-800: #b44a04;
  --color-error-100: #fff5f5;
  --color-error-300: #ffbdbf;
  --color-error-400: #ff8589;
  --color-error-800: #a30005;
  --color-overlay: rgba(29, 38, 48, 0.5);
  --font-sans: "Segoe UI Variable Text", "Segoe UI", system-ui, -apple-system, sans-serif;
  --font-serif: Charter, "Bitstream Charter", "Sitka Text", Cambria, Georgia, serif;
  --spacing-extra-extra-small: 0.25rem;
  --spacing-extra-small: 0.5rem;
  --spacing-small: 1rem;
  --spacing-medium: 1.5rem;
  --spacing-large: 2rem;
  --spacing-extra-large: 3rem;
  --radius-small: 0.125rem;
  --radius-medium: 0.25rem;
  --transition-fast: 300ms;
  --z-component-modal: 500;
}
body {
  margin: 0;
  background: var(--color-background);
  color: var(--color-text);
  font-family: var(--font-sans);
  font-kerning: normal;
  line-height: 1.6;
}
.doc-logo {
  display: inline-flex;
  height: 2rem;
  margin-bottom: var(--spacing-medium);
}
.doc-logo:empty {
  display: none;
}
.doc-logo svg, .doc-logo img {
  height: 2rem;
  width: auto;
}
.doc-eyebrow {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin-bottom: var(--spacing-extra-small);
}
.doc-eyebrow:empty {
  display: none;
}
.doc-eyebrow .status-badge {
  font-weight: 700;
  font-size: 0.6875rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  padding: 0.125rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  background: var(--color-secondary-600);
  color: var(--color-secondary-1000);
}
.doc-title {
  font-weight: 600;
  font-size: clamp(1.75rem, 1.25rem + 2.2vw, 2.5rem);
  line-height: 1.15;
  letter-spacing: -0.01em;
  text-wrap: balance;
  margin: 0 0 var(--spacing-small);
}
.doc-subtitle {
  font-family: var(--font-serif);
  font-style: italic;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.5;
  color: var(--color-neutral-400);
  margin: 0 0 var(--spacing-medium);
}
.doc-subtitle:empty {
  display: none;
}
.doc-info-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
  gap: var(--spacing-small);
  padding-top: var(--spacing-medium);
  border-top: 1px solid var(--color-tertiary-700);
}
.doc-info-item {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}
.doc-info-item .label {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-500);
}
.doc-info-item .value {
  font-size: 0.8125rem;
  color: var(--color-neutral-200);
}
.changelog {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: 0 0 var(--spacing-large);
  padding: 0 var(--spacing-medium);
  overflow: hidden;
  font-family: var(--font-sans);
}
.changelog summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-weight: 600;
  font-size: 0.9375rem;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}
.changelog summary::-webkit-details-marker {
  display: none;
}
.changelog summary:hover {
  background: var(--color-primary-100);
}
.changelog summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}
.changelog summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}
.changelog[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}
.changelog[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
}
.changelog table {
  border-collapse: collapse;
  width: 100%;
  margin: var(--spacing-small) 0;
  font-size: 0.9375rem;
  line-height: 1.5;
}
.changelog th, .changelog td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}
.changelog th {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
  border-bottom: 1px solid var(--color-neutral-300);
}
.changelog tbody tr:last-child td {
  border-bottom: none;
}
.toc {
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-small) 0;
}
.toc-appendix {
  margin-top: 0;
}
.toc .toc-label {
  font-weight: 600;
  margin: 0 0 var(--spacing-extra-small);
}
.toc ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
.toc ul ul {
  padding-left: var(--spacing-medium);
  margin-top: var(--spacing-extra-extra-small);
}
.toc li {
  margin: var(--spacing-extra-extra-small) 0;
}
.toc a {
  display: inline-flex;
  gap: var(--spacing-extra-extra-small);
  color: var(--color-primary-600);
  text-decoration: none;
  font-size: 0.9rem;
  padding: 0.25rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  transition: background var(--transition-fast) ease-in-out;
}
.toc a:hover {
  background: var(--color-primary-100);
}
.toc-number {
  color: var(--color-neutral-600);
  font-variant-numeric: tabular-nums;
}
.doc-content {
  max-width: none;
  font-family: var(--font-serif);
  font-size: 1.0625rem;
  line-height: 1.7;
  --tw-prose-body: var(--color-text);
  --tw-prose-headings: var(--color-text);
  --tw-prose-links: var(--color-primary-600);
  --tw-prose-bold: var(--color-text);
  --tw-prose-counters: var(--color-neutral-600);
  --tw-prose-bullets: var(--color-neutral-400);
  --tw-prose-hr: var(--color-neutral-300);
  --tw-prose-quotes: var(--color-neutral-700);
  --tw-prose-quote-borders: var(--color-neutral-400);
  --tw-prose-captions: var(--color-neutral-600);
  --tw-prose-code: var(--color-text);
  --tw-prose-pre-code: var(--color-neutral-000);
  --tw-prose-pre-bg: var(--color-neutral-1000);
  --tw-prose-th-borders: var(--color-neutral-300);
  --tw-prose-td-borders: var(--color-neutral-200);
}
.doc-content p, .doc-content li {
  text-wrap: pretty;
}
.doc-content h2, .doc-content h3, .doc-content h4 {
  font-family: var(--font-sans);
  line-height: 1.25;
  text-wrap: balance;
  scroll-margin-top: var(--spacing-large);
}
.doc-content h2 {
  display: flex;
  align-items: center;
  gap: var(--spacing-small);
  font-weight: 600;
  font-size: 1.625rem;
  margin-top: var(--spacing-extra-large);
}
.doc-content h2:not(:first-of-type) {
  border-top: 1px solid var(--color-neutral-300);
  padding-top: var(--spacing-large);
}
.doc-content h3 {
  font-weight: 600;
  font-size: 1.3125rem;
  margin-top: var(--spacing-large);
}
.doc-content h4 {
  font-weight: 600;
  font-size: 1.0625rem;
  margin-top: var(--spacing-large);
}
.doc-content h2 .heading-number {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 1.75rem;
  height: 1.75rem;
  background: var(--color-primary-600);
  color: var(--color-neutral-000);
  font-size: 0.75rem;
  font-weight: 700;
  border-radius: var(--radius-medium);
}
.doc-content h3 .heading-number, .doc-content h4 .heading-number {
  color: var(--color-neutral-600);
  font-weight: 400;
  margin-right: 0.25rem;
}
.doc-content a {
  color: var(--color-primary-600);
}
.doc-content code {
  background: var(--color-neutral-200);
  border-radius: var(--radius-small);
  padding: 0.1em 0.3em;
}
.doc-content pre {
  background: var(--color-neutral-1000);
  color: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
  overflow-x: auto;
}
.doc-content pre code {
  background: none;
  padding: 0;
}
.doc-content .code-block {
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
}
.doc-content .code-block pre {
  margin: 0;
  border-radius: 0;
}
.doc-content .code-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--spacing-small);
  background: var(--color-neutral-200);
  padding: var(--spacing-extra-small) var(--spacing-small);
  border-bottom: 1px solid var(--color-neutral-300);
}
.doc-content .code-header .lang {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}
.doc-content .code-header .filename {
  font-size: 0.75rem;
  color: var(--color-neutral-600);
}
.doc-content .hljs-comment, .doc-content .hljs-quote {
  color: var(--color-neutral-500);
  font-style: italic;
}
.doc-content .hljs-keyword, .doc-content .hljs-selector-tag, .doc-content .hljs-literal, .doc-content .hljs-doctag {
  color: var(--color-primary-400);
}
.doc-content .hljs-string, .doc-content .hljs-regexp, .doc-content .hljs-addition {
  color: var(--color-secondary-400);
}
.doc-content .hljs-number, .doc-content .hljs-symbol, .doc-content .hljs-bullet, .doc-content .hljs-meta {
  color: var(--color-secondary-500);
}
.doc-content .hljs-title, .doc-content .hljs-section, .doc-content .hljs-name {
  color: var(--color-tertiary-400);
}
.doc-content .hljs-attr, .doc-content .hljs-attribute, .doc-content .hljs-variable, .doc-content .hljs-template-variable, .doc-content .hljs-type, .doc-content .hljs-built_in, .doc-content .hljs-selector-class, .doc-content .hljs-selector-id {
  color: var(--color-tertiary-500);
}
.doc-content .hljs-deletion {
  color: var(--color-error-400);
}
.doc-content .hljs-emphasis {
  font-style: italic;
}
.doc-content .hljs-strong {
  font-weight: 600;
}
.doc-content blockquote {
  border-left: 1px solid var(--color-neutral-400);
  margin: var(--spacing-large) 0;
  padding-left: var(--spacing-medium);
  font-style: italic;
  color: var(--color-neutral-700);
}
.doc-content .alert {
  border: 1px solid;
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-large) 0;
}
.doc-content .alert p {
  margin: 0;
}
.doc-content .alert p + p {
  margin-top: var(--spacing-extra-small);
}
.doc-content .alert .alert-title {
  font-family: var(--font-sans);
  font-weight: 600;
  margin-bottom: var(--spacing-extra-small);
}
.doc-content .alert-info {
  background: var(--color-information-100);
  border-color: var(--color-information-300);
}
.doc-content .alert-info .alert-title {
  color: var(--color-information-800);
}
.doc-content .alert-success {
  background: var(--color-success-100);
  border-color: var(--color-success-300);
}
.doc-content .alert-success .alert-title {
  color: var(--color-success-800);
}
.doc-content .alert-warn {
  background: var(--color-alert-100);
  border-color: var(--color-alert-300);
}
.doc-content .alert-warn .alert-title {
  color: var(--color-alert-800);
}
.doc-content .alert-error {
  background: var(--color-error-100);
  border-color: var(--color-error-300);
}
.doc-content .alert-error .alert-title {
  color: var(--color-error-800);
}
.doc-content table {
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
  font-family: var(--font-sans);
  font-size: 0.9375rem;
  line-height: 1.5;
}
.doc-content th, .doc-content td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}
.doc-content td {
  font-variant-numeric: tabular-nums;
}
.doc-content tbody tr:last-child td {
  border-bottom: none;
}
.doc-content tbody tr:hover td {
  background: var(--color-neutral-100);
}
.doc-content th {
  background: var(--color-neutral-200);
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}
.mermaid-wrapper {
  margin: var(--spacing-large) 0;
  padding: var(--spacing-medium);
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  cursor: zoom-in;
  text-align: center;
}
.mermaid-wrapper .mermaid svg {
  max-width: 100%;
  height: auto;
}
.lightbox-overlay {
  display: none;
  position: fixed;
  inset: 0;
  z-index: var(--z-component-modal);
  background: var(--color-overlay);
  align-items: center;
  justify-content: center;
  padding: var(--spacing-large);
  cursor: zoom-out;
}
.lightbox-overlay.open {
  display: flex;
}
.lightbox-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 90vw;
  max-height: 90vh;
  overflow: auto;
  background: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
}
.lightbox-overlay .lightbox-content svg {
  display: block;
  width: 100%;
  height: auto;
}
.lightbox-close {
  position: absolute;
  top: var(--spacing-large);
  right: var(--spacing-large);
  background: none;
  border: none;
  color: var(--color-neutral-000);
  font-size: 2rem;
  line-height: 1;
  cursor: pointer;
}
.appendix-entry {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: var(--spacing-medium) 0;
  padding: 0 var(--spacing-medium);
  overflow: hidden;
}
.appendix-entry summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-family: var(--font-sans);
  font-weight: 600;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}
.appendix-entry summary::-webkit-details-marker {
  display: none;
}
.appendix-entry summary:hover {
  background: var(--color-primary-100);
}
.appendix-entry summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}
.appendix-entry summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}
.appendix-entry[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}
.appendix-entry summary .heading-number {
  color: var(--color-primary-600);
}
.appendix-entry[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
  margin-bottom: var(--spacing-small);
}
.appendix-entry[open] {
  padding-bottom: var(--spacing-small);
}
.appendix-entry > :last-child {
  margin-bottom: 0;
}
@media print {
  .doc-toc, .lightbox-overlay {
    display: none;
  }
}
@media (prefers-reduced-motion: reduce) {
  .toc a, .appendix-entry summary, .appendix-entry summary::after, .changelog summary, .changelog summary::after {
    transition: none;
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}

  </style>
</head>
<body>
  <header class="doc-header bg-[var(--color-tertiary-900)] text-[var(--color-neutral-000)] px-8 pt-8 pb-6 border-b-4 border-[var(--color-primary-600)]">
    <span class="doc-logo"></span>
    <div class="doc-eyebrow"></div>
    <h1 class="doc-title">example-obsidian</h1>
    <p class="doc-subtitle"></p>
    
  </header>

  <div class="doc-layout flex flex-col md:flex-row md:items-start gap-8 max-w-[72rem] mx-auto px-8">
    <aside class="doc-toc md:sticky md:top-8 md:shrink-0 md:grow-0 md:basis-56 md:w-56 md:max-h-[calc(100vh-4rem)] md:overflow-y-auto"><nav class="toc"><p class="toc-label">Contents</p><ul><li><a href="#overview"><span class="toc-number">1</span> Overview</a></li></ul></nav></aside>

    <main class="doc flex-1 min-w-0 max-w-[44rem] py-12">
      <details class="changelog"><summary>Revision History</summary><table><thead><tr><th>Version</th><th>Date</th><th>Description</th></tr></thead><tbody><tr><td>1.0</td><td>14 July 2026</td><td>Initial version.</td></tr></tbody></table></details>
      <article class="doc-content prose max-w-none">
        <h2 id="overview"><span class="heading-number">1. </span>Overview</h2>
<p>See Related Note and the relevant section for background.</p>
<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=" alt="example-diagram.png" width="300"></p>
<div class="alert alert-info">
<p class="alert-title">Summary</p>
<p>A summary callout using an Obsidian-only alias.</p>
</div>
<p>This is <mark>important</mark> and has a comment.  It also has a block ref.</p>
<table>
<thead>
<tr>
<th>Term</th>
<th>Related</th>
</tr>
</thead>
<tbody>
<tr>
<td>Plain</td>
<td>Related Note</td>
</tr>
<tr>
<td>Aliased</td>
<td>Alias</td>
</tr>
</tbody>
</table>
      </article>
    </main>
  </div>

  <footer class="doc-footer text-center text-[var(--color-neutral-600)] text-[0.8rem] p-8 border-t border-[var(--color-neutral-300)]">
    <p>Built with mashay</p>
  </footer>

  <div id="mermaid-lightbox" class="lightbox-overlay">
    <button type="button" class="lightbox-close" aria-label="Close">&times;</button>
    <div class="lightbox-content"></div>
  </div>

  
  <script>
    document.addEventListener("click", function (e) {
      var wrapper = e.target.closest(".mermaid-wrapper");
      var overlay = document.getElementById("mermaid-lightbox");
      if (wrapper) {
        var svg = wrapper.querySelector("svg");
        if (svg) {
          var clone = svg.cloneNode(true);
          clone.removeAttribute("width");
          clone.removeAttribute("height");
          clone.removeAttribute("style");
          clone.style.width = "100%";
          clone.style.height = "auto";
          var content = overlay.querySelector(".lightbox-content");
          content.innerHTML = "";
          content.appendChild(clone);
          overlay.classList.add("open");
        }
        return;
      }
      if (e.target.closest(".lightbox-close") || e.target === overlay) {
        overlay.classList.remove("open");
      }
    });
    document.addEventListener("keydown", function (e) {
      if (e.key === "Escape") {
        document.getElementById("mermaid-lightbox").classList.remove("open");
      }
    });
  </script>
</body>
</html>
"
`;

exports[`built CLI end-to-end > renders the example fixture to a self-contained HTML file 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>A Field Guide to Coffee Brewing</title>
  <meta name="description" content="How grind size, water, and time shape a cup across common brewing methods." />
  <style>
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root, :host {
    --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
      "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
      "Segoe UI Symbol", "Noto Color Emoji";
    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --color-neutral-100: oklch(97% 0 none);
    --color-neutral-200: oklch(92.2% 0 none);
    --color-neutral-300: oklch(87% 0 none);
    --color-neutral-400: oklch(70.8% 0 none);
    --color-neutral-500: oklch(55.6% 0 none);
    --color-neutral-600: oklch(43.9% 0 none);
    --color-neutral-700: oklch(37.1% 0 none);
    --spacing: 0.25rem;
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
  }
}
@layer base {
  *, ::after, ::before, ::backdrop, ::file-selector-button {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0 solid;
  }
  html, :host {
    line-height: 1.5;
    -webkit-text-size-adjust: 100%;
    tab-size: 4;
    font-family: var(--default-font-family, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
    font-feature-settings: var(--default-font-feature-settings, normal);
    font-variation-settings: var(--default-font-variation-settings, normal);
    -webkit-tap-highlight-color: transparent;
  }
  hr {
    height: 0;
    color: inherit;
    border-top-width: 1px;
  }
  abbr:where([title]) {
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
  }
  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
  }
  a {
    color: inherit;
    -webkit-text-decoration: inherit;
    text-decoration: inherit;
  }
  b, strong {
    font-weight: bolder;
  }
  code, kbd, samp, pre {
    font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
    font-feature-settings: var(--default-mono-font-feature-settings, normal);
    font-variation-settings: var(--default-mono-font-variation-settings, normal);
    font-size: 1em;
  }
  small {
    font-size: 80%;
  }
  sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  sub {
    bottom: -0.25em;
  }
  sup {
    top: -0.5em;
  }
  table {
    text-indent: 0;
    border-color: inherit;
    border-collapse: collapse;
  }
  :-moz-focusring:where(:not(iframe)) {
    outline: auto;
  }
  progress {
    vertical-align: baseline;
  }
  summary {
    display: list-item;
  }
  ol, ul, menu {
    list-style: none;
  }
  img, svg, video, canvas, audio, iframe, embed, object {
    display: block;
    vertical-align: middle;
  }
  img, video {
    max-width: 100%;
    height: auto;
  }
  button, input, select, optgroup, textarea, ::file-selector-button {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    border-radius: 0;
    background-color: transparent;
    opacity: 1;
  }
  :where(select:is([multiple], [size])) optgroup {
    font-weight: bolder;
  }
  :where(select:is([multiple], [size])) optgroup option {
    padding-inline-start: 20px;
  }
  ::file-selector-button {
    margin-inline-end: 4px;
  }
  ::placeholder {
    opacity: 1;
  }
  @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
    ::placeholder {
      color: currentcolor;
      @supports (color: color-mix(in lab, red, red)) {
        color: color-mix(in oklab, currentcolor 50%, transparent);
      }
    }
  }
  textarea {
    resize: vertical;
  }
  ::-webkit-search-decoration {
    -webkit-appearance: none;
  }
  ::-webkit-date-and-time-value {
    min-height: 1lh;
    text-align: inherit;
  }
  ::-webkit-datetime-edit {
    display: inline-flex;
  }
  ::-webkit-datetime-edit-fields-wrapper {
    padding: 0;
  }
  ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
    padding-block: 0;
  }
  ::-webkit-calendar-picker-indicator {
    line-height: 1;
  }
  :-moz-ui-invalid {
    box-shadow: none;
  }
  button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
    appearance: button;
  }
  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
    height: auto;
  }
  [hidden]:where(:not([hidden="until-found"])) {
    display: none !important;
  }
}
@layer utilities {
  .fixed {
    position: fixed;
  }
  .mx-auto {
    margin-inline: auto;
  }
  .prose {
    color: var(--tw-prose-body);
    max-width: 65ch;
    :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
      margin-bottom: 1.25em;
    }
    :where([class~="lead"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-lead);
      font-size: 1.25em;
      line-height: 1.6;
      margin-top: 1.2em;
      margin-bottom: 1.2em;
    }
    :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-links);
      text-decoration: underline;
      font-weight: 500;
    }
    :where(strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-bold);
      font-weight: 600;
    }
    :where(a strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(blockquote strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(thead th strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(ol):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: decimal;
      margin-top: 1.25em;
      margin-bottom: 1.25em;
      padding-inline-start: 1.625em;
    }
    :where(ol[type="A"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-alpha;
    }
    :where(ol[type="a"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-alpha;
    }
    :where(ol[type="A" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-alpha;
    }
    :where(ol[type="a" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-alpha;
    }
    :where(ol[type="I"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-roman;
    }
    :where(ol[type="i"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-roman;
    }
    :where(ol[type="I" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: upper-roman;
    }
    :where(ol[type="i" s]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: lower-roman;
    }
    :where(ol[type="1"]):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: decimal;
    }
    :where(ul):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      list-style-type: disc;
      margin-top: 1.25em;
      margin-bottom: 1.25em;
      padding-inline-start: 1.625em;
    }
    :where(ol > li):not(:where([class~="not-prose"], [class~="not-prose"] *))::marker {
      font-weight: 400;
      color: var(--tw-prose-counters);
    }
    :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *))::marker {
      color: var(--tw-prose-bullets);
    }
    :where(dt):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      margin-top: 1.25em;
    }
    :where(hr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-color: var(--tw-prose-hr);
      border-top-width: 1px;
      margin-top: 3em;
      margin-bottom: 3em;
    }
    :where(blockquote):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 500;
      font-style: italic;
      color: var(--tw-prose-quotes);
      border-inline-start-width: 0.25rem;
      border-inline-start-color: var(--tw-prose-quote-borders);
      quotes: "\\201C""\\201D""\\2018""\\2019";
      margin-top: 1.6em;
      margin-bottom: 1.6em;
      padding-inline-start: 1em;
    }
    :where(blockquote p:first-of-type):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: open-quote;
    }
    :where(blockquote p:last-of-type):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: close-quote;
    }
    :where(h1):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 800;
      font-size: 2.25em;
      margin-top: 0;
      margin-bottom: 0.8888889em;
      line-height: 1.1111111;
    }
    :where(h1 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 900;
      color: inherit;
    }
    :where(h2):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 700;
      font-size: 1.5em;
      margin-top: 2em;
      margin-bottom: 1em;
      line-height: 1.3333333;
    }
    :where(h2 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 800;
      color: inherit;
    }
    :where(h3):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      font-size: 1.25em;
      margin-top: 1.6em;
      margin-bottom: 0.6em;
      line-height: 1.6;
    }
    :where(h3 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 700;
      color: inherit;
    }
    :where(h4):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      margin-top: 1.5em;
      margin-bottom: 0.5em;
      line-height: 1.5;
    }
    :where(h4 strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 700;
      color: inherit;
    }
    :where(img):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(picture):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      display: block;
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(video):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(kbd):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      font-weight: 500;
      font-family: inherit;
      color: var(--tw-prose-kbd);
      box-shadow: 0 0 0 1px var(--tw-prose-kbd-shadows), 0 3px 0 var(--tw-prose-kbd-shadows);
      font-size: 0.875em;
      border-radius: 0.3125rem;
      padding-top: 0.1875em;
      padding-inline-end: 0.375em;
      padding-bottom: 0.1875em;
      padding-inline-start: 0.375em;
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-code);
      font-weight: 600;
      font-size: 0.875em;
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: "\`";
    }
    :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: "\`";
    }
    :where(a code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(h1 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(h2 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
      font-size: 0.875em;
    }
    :where(h3 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
      font-size: 0.9em;
    }
    :where(h4 code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(blockquote code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(thead th code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: inherit;
    }
    :where(pre):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-pre-code);
      background-color: var(--tw-prose-pre-bg);
      overflow-x: auto;
      font-weight: 400;
      font-size: 0.875em;
      line-height: 1.7142857;
      margin-top: 1.7142857em;
      margin-bottom: 1.7142857em;
      border-radius: 0.375rem;
      padding-top: 0.8571429em;
      padding-inline-end: 1.1428571em;
      padding-bottom: 0.8571429em;
      padding-inline-start: 1.1428571em;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      background-color: transparent;
      border-width: 0;
      border-radius: 0;
      padding: 0;
      font-weight: inherit;
      color: inherit;
      font-size: inherit;
      font-family: inherit;
      line-height: inherit;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
      content: none;
    }
    :where(pre code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
      content: none;
    }
    :where(table):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      width: 100%;
      table-layout: auto;
      margin-top: 2em;
      margin-bottom: 2em;
      font-size: 0.875em;
      line-height: 1.7142857;
    }
    :where(thead):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 1px;
      border-bottom-color: var(--tw-prose-th-borders);
    }
    :where(thead th):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-headings);
      font-weight: 600;
      vertical-align: bottom;
      padding-inline-end: 0.5714286em;
      padding-bottom: 0.5714286em;
      padding-inline-start: 0.5714286em;
    }
    :where(tbody tr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 1px;
      border-bottom-color: var(--tw-prose-td-borders);
    }
    :where(tbody tr:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-bottom-width: 0;
    }
    :where(tbody td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      vertical-align: baseline;
    }
    :where(tfoot):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      border-top-width: 1px;
      border-top-color: var(--tw-prose-th-borders);
    }
    :where(tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      vertical-align: top;
    }
    :where(th, td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      text-align: start;
    }
    :where(figure > *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
      margin-bottom: 0;
    }
    :where(figcaption):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      color: var(--tw-prose-captions);
      font-size: 0.875em;
      line-height: 1.4285714;
      margin-top: 0.8571429em;
    }
    --tw-prose-body: oklch(37.3% 0.034 259.733);
    --tw-prose-headings: oklch(21% 0.034 264.665);
    --tw-prose-lead: oklch(44.6% 0.03 256.802);
    --tw-prose-links: oklch(21% 0.034 264.665);
    --tw-prose-bold: oklch(21% 0.034 264.665);
    --tw-prose-counters: oklch(55.1% 0.027 264.364);
    --tw-prose-bullets: oklch(87.2% 0.01 258.338);
    --tw-prose-hr: oklch(92.8% 0.006 264.531);
    --tw-prose-quotes: oklch(21% 0.034 264.665);
    --tw-prose-quote-borders: oklch(92.8% 0.006 264.531);
    --tw-prose-captions: oklch(55.1% 0.027 264.364);
    --tw-prose-kbd: oklch(21% 0.034 264.665);
    --tw-prose-kbd-shadows: color-mix(in oklab, oklch(21% 0.034 264.665) 10%, transparent);
    --tw-prose-code: oklch(21% 0.034 264.665);
    --tw-prose-pre-code: oklch(92.8% 0.006 264.531);
    --tw-prose-pre-bg: oklch(27.8% 0.033 256.848);
    --tw-prose-th-borders: oklch(87.2% 0.01 258.338);
    --tw-prose-td-borders: oklch(92.8% 0.006 264.531);
    --tw-prose-invert-body: oklch(87.2% 0.01 258.338);
    --tw-prose-invert-headings: #fff;
    --tw-prose-invert-lead: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-links: #fff;
    --tw-prose-invert-bold: #fff;
    --tw-prose-invert-counters: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-bullets: oklch(44.6% 0.03 256.802);
    --tw-prose-invert-hr: oklch(37.3% 0.034 259.733);
    --tw-prose-invert-quotes: oklch(96.7% 0.003 264.542);
    --tw-prose-invert-quote-borders: oklch(37.3% 0.034 259.733);
    --tw-prose-invert-captions: oklch(70.7% 0.022 261.325);
    --tw-prose-invert-kbd: #fff;
    --tw-prose-invert-kbd-shadows: rgb(255 255 255 / 10%);
    --tw-prose-invert-code: #fff;
    --tw-prose-invert-pre-code: oklch(87.2% 0.01 258.338);
    --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
    --tw-prose-invert-th-borders: oklch(44.6% 0.03 256.802);
    --tw-prose-invert-td-borders: oklch(37.3% 0.034 259.733);
    font-size: 1rem;
    line-height: 1.75;
    :where(picture > img):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
      margin-bottom: 0;
    }
    :where(li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.5em;
      margin-bottom: 0.5em;
    }
    :where(ol > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0.375em;
    }
    :where(ul > li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0.375em;
    }
    :where(.prose > ul > li p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.75em;
      margin-bottom: 0.75em;
    }
    :where(.prose > ul > li > p:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
    }
    :where(.prose > ul > li > p:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 1.25em;
    }
    :where(.prose > ol > li > p:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
    }
    :where(.prose > ol > li > p:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 1.25em;
    }
    :where(ul ul, ul ol, ol ul, ol ol):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.75em;
      margin-bottom: 0.75em;
    }
    :where(dl):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 1.25em;
      margin-bottom: 1.25em;
    }
    :where(dd):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0.5em;
      padding-inline-start: 1.625em;
    }
    :where(hr + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h2 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h3 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(h4 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(thead th:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0;
    }
    :where(thead th:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-end: 0;
    }
    :where(tbody td, tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-top: 0.5714286em;
      padding-inline-end: 0.5714286em;
      padding-bottom: 0.5714286em;
      padding-inline-start: 0.5714286em;
    }
    :where(tbody td:first-child, tfoot td:first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-start: 0;
    }
    :where(tbody td:last-child, tfoot td:last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      padding-inline-end: 0;
    }
    :where(figure):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 2em;
      margin-bottom: 2em;
    }
    :where(.prose > :first-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-top: 0;
    }
    :where(.prose > :last-child):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
      margin-bottom: 0;
    }
  }
  .flex {
    display: flex;
  }
  .max-w-\\[44rem\\] {
    max-width: 44rem;
  }
  .max-w-\\[72rem\\] {
    max-width: 72rem;
  }
  .max-w-none {
    max-width: none;
  }
  .min-w-0 {
    min-width: 0px;
  }
  .flex-1 {
    flex: 1;
  }
  .flex-col {
    flex-direction: column;
  }
  .gap-8 {
    gap: calc(var(--spacing) * 8);
  }
  .border-t {
    border-top-style: var(--tw-border-style);
    border-top-width: 1px;
  }
  .border-b-4 {
    border-bottom-style: var(--tw-border-style);
    border-bottom-width: 4px;
  }
  .border-\\[var\\(--color-neutral-300\\)\\] {
    border-color: var(--color-neutral-300);
  }
  .border-\\[var\\(--color-primary-600\\)\\] {
    border-color: var(--color-primary-600);
  }
  .bg-\\[var\\(--color-tertiary-900\\)\\] {
    background-color: var(--color-tertiary-900);
  }
  .p-8 {
    padding: calc(var(--spacing) * 8);
  }
  .px-8 {
    padding-inline: calc(var(--spacing) * 8);
  }
  .py-12 {
    padding-block: calc(var(--spacing) * 12);
  }
  .pt-8 {
    padding-top: calc(var(--spacing) * 8);
  }
  .pb-6 {
    padding-bottom: calc(var(--spacing) * 6);
  }
  .text-center {
    text-align: center;
  }
  .text-\\[0\\.8rem\\] {
    font-size: 0.8rem;
  }
  .text-\\[var\\(--color-neutral-000\\)\\] {
    color: var(--color-neutral-000);
  }
  .text-\\[var\\(--color-neutral-600\\)\\] {
    color: var(--color-neutral-600);
  }
  @media (width >= 48rem) {
    .md\\:sticky {
      position: sticky;
    }
    .md\\:top-8 {
      top: calc(var(--spacing) * 8);
    }
    .md\\:max-h-\\[calc\\(100vh-4rem\\)\\] {
      max-height: calc(100vh - 4rem);
    }
    .md\\:w-56 {
      width: calc(var(--spacing) * 56);
    }
    .md\\:shrink-0 {
      flex-shrink: 0;
    }
    .md\\:grow-0 {
      flex-grow: 0;
    }
    .md\\:basis-56 {
      flex-basis: calc(var(--spacing) * 56);
    }
    .md\\:flex-row {
      flex-direction: row;
    }
    .md\\:items-start {
      align-items: flex-start;
    }
    .md\\:overflow-y-auto {
      overflow-y: auto;
    }
  }
}
:root {
  --color-background: #ffffff;
  --color-text: #1b242d;
  --color-neutral-000: #ffffff;
  --color-neutral-100: #f8fafb;
  --color-neutral-200: #f0f3f6;
  --color-neutral-300: #dbe0e6;
  --color-neutral-400: #cad1d8;
  --color-neutral-500: #b3bdc7;
  --color-neutral-600: #7c8a98;
  --color-neutral-700: #576575;
  --color-neutral-1000: #0f1419;
  --color-primary-100: #f2fbfd;
  --color-primary-400: #90dfef;
  --color-primary-600: #0c7e96;
  --color-secondary-400: #ffd88a;
  --color-secondary-500: #fec757;
  --color-secondary-600: #ffb733;
  --color-secondary-1000: #2b251c;
  --color-tertiary-400: #a2d0e6;
  --color-tertiary-500: #6bb9e1;
  --color-tertiary-700: #066b9d;
  --color-tertiary-900: #023e5c;
  --color-information-100: #f2fbfd;
  --color-information-300: #c5edf6;
  --color-information-800: #034e5e;
  --color-success-100: #f1f9f3;
  --color-success-300: #ccf0d7;
  --color-success-800: #006629;
  --color-alert-100: #fcf5ee;
  --color-alert-300: #fae0c2;
  --color-alert-800: #b44a04;
  --color-error-100: #fff5f5;
  --color-error-300: #ffbdbf;
  --color-error-400: #ff8589;
  --color-error-800: #a30005;
  --color-overlay: rgba(29, 38, 48, 0.5);
  --font-sans: "Segoe UI Variable Text", "Segoe UI", system-ui, -apple-system, sans-serif;
  --font-serif: Charter, "Bitstream Charter", "Sitka Text", Cambria, Georgia, serif;
  --spacing-extra-extra-small: 0.25rem;
  --spacing-extra-small: 0.5rem;
  --spacing-small: 1rem;
  --spacing-medium: 1.5rem;
  --spacing-large: 2rem;
  --spacing-extra-large: 3rem;
  --radius-small: 0.125rem;
  --radius-medium: 0.25rem;
  --transition-fast: 300ms;
  --z-component-modal: 500;
}
body {
  margin: 0;
  background: var(--color-background);
  color: var(--color-text);
  font-family: var(--font-sans);
  font-kerning: normal;
  line-height: 1.6;
}
.doc-logo {
  display: inline-flex;
  height: 2rem;
  margin-bottom: var(--spacing-medium);
}
.doc-logo:empty {
  display: none;
}
.doc-logo svg, .doc-logo img {
  height: 2rem;
  width: auto;
}
.doc-eyebrow {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin-bottom: var(--spacing-extra-small);
}
.doc-eyebrow:empty {
  display: none;
}
.doc-eyebrow .status-badge {
  font-weight: 700;
  font-size: 0.6875rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  padding: 0.125rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  background: var(--color-secondary-600);
  color: var(--color-secondary-1000);
}
.doc-title {
  font-weight: 600;
  font-size: clamp(1.75rem, 1.25rem + 2.2vw, 2.5rem);
  line-height: 1.15;
  letter-spacing: -0.01em;
  text-wrap: balance;
  margin: 0 0 var(--spacing-small);
}
.doc-subtitle {
  font-family: var(--font-serif);
  font-style: italic;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.5;
  color: var(--color-neutral-400);
  margin: 0 0 var(--spacing-medium);
}
.doc-subtitle:empty {
  display: none;
}
.doc-info-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
  gap: var(--spacing-small);
  padding-top: var(--spacing-medium);
  border-top: 1px solid var(--color-tertiary-700);
}
.doc-info-item {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}
.doc-info-item .label {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-500);
}
.doc-info-item .value {
  font-size: 0.8125rem;
  color: var(--color-neutral-200);
}
.changelog {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: 0 0 var(--spacing-large);
  padding: 0 var(--spacing-medium);
  overflow: hidden;
  font-family: var(--font-sans);
}
.changelog summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-weight: 600;
  font-size: 0.9375rem;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}
.changelog summary::-webkit-details-marker {
  display: none;
}
.changelog summary:hover {
  background: var(--color-primary-100);
}
.changelog summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}
.changelog summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}
.changelog[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}
.changelog[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
}
.changelog table {
  border-collapse: collapse;
  width: 100%;
  margin: var(--spacing-small) 0;
  font-size: 0.9375rem;
  line-height: 1.5;
}
.changelog th, .changelog td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}
.changelog th {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
  border-bottom: 1px solid var(--color-neutral-300);
}
.changelog tbody tr:last-child td {
  border-bottom: none;
}
.toc {
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-small) 0;
}
.toc-appendix {
  margin-top: 0;
}
.toc .toc-label {
  font-weight: 600;
  margin: 0 0 var(--spacing-extra-small);
}
.toc ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
.toc ul ul {
  padding-left: var(--spacing-medium);
  margin-top: var(--spacing-extra-extra-small);
}
.toc li {
  margin: var(--spacing-extra-extra-small) 0;
}
.toc a {
  display: inline-flex;
  gap: var(--spacing-extra-extra-small);
  color: var(--color-primary-600);
  text-decoration: none;
  font-size: 0.9rem;
  padding: 0.25rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  transition: background var(--transition-fast) ease-in-out;
}
.toc a:hover {
  background: var(--color-primary-100);
}
.toc-number {
  color: var(--color-neutral-600);
  font-variant-numeric: tabular-nums;
}
.doc-content {
  max-width: none;
  font-family: var(--font-serif);
  font-size: 1.0625rem;
  line-height: 1.7;
  --tw-prose-body: var(--color-text);
  --tw-prose-headings: var(--color-text);
  --tw-prose-links: var(--color-primary-600);
  --tw-prose-bold: var(--color-text);
  --tw-prose-counters: var(--color-neutral-600);
  --tw-prose-bullets: var(--color-neutral-400);
  --tw-prose-hr: var(--color-neutral-300);
  --tw-prose-quotes: var(--color-neutral-700);
  --tw-prose-quote-borders: var(--color-neutral-400);
  --tw-prose-captions: var(--color-neutral-600);
  --tw-prose-code: var(--color-text);
  --tw-prose-pre-code: var(--color-neutral-000);
  --tw-prose-pre-bg: var(--color-neutral-1000);
  --tw-prose-th-borders: var(--color-neutral-300);
  --tw-prose-td-borders: var(--color-neutral-200);
}
.doc-content p, .doc-content li {
  text-wrap: pretty;
}
.doc-content h2, .doc-content h3, .doc-content h4 {
  font-family: var(--font-sans);
  line-height: 1.25;
  text-wrap: balance;
  scroll-margin-top: var(--spacing-large);
}
.doc-content h2 {
  display: flex;
  align-items: center;
  gap: var(--spacing-small);
  font-weight: 600;
  font-size: 1.625rem;
  margin-top: var(--spacing-extra-large);
}
.doc-content h2:not(:first-of-type) {
  border-top: 1px solid var(--color-neutral-300);
  padding-top: var(--spacing-large);
}
.doc-content h3 {
  font-weight: 600;
  font-size: 1.3125rem;
  margin-top: var(--spacing-large);
}
.doc-content h4 {
  font-weight: 600;
  font-size: 1.0625rem;
  margin-top: var(--spacing-large);
}
.doc-content h2 .heading-number {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 1.75rem;
  height: 1.75rem;
  background: var(--color-primary-600);
  color: var(--color-neutral-000);
  font-size: 0.75rem;
  font-weight: 700;
  border-radius: var(--radius-medium);
}
.doc-content h3 .heading-number, .doc-content h4 .heading-number {
  color: var(--color-neutral-600);
  font-weight: 400;
  margin-right: 0.25rem;
}
.doc-content a {
  color: var(--color-primary-600);
}
.doc-content code {
  background: var(--color-neutral-200);
  border-radius: var(--radius-small);
  padding: 0.1em 0.3em;
}
.doc-content pre {
  background: var(--color-neutral-1000);
  color: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
  overflow-x: auto;
}
.doc-content pre code {
  background: none;
  padding: 0;
}
.doc-content .code-block {
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
}
.doc-content .code-block pre {
  margin: 0;
  border-radius: 0;
}
.doc-content .code-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--spacing-small);
  background: var(--color-neutral-200);
  padding: var(--spacing-extra-small) var(--spacing-small);
  border-bottom: 1px solid var(--color-neutral-300);
}
.doc-content .code-header .lang {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}
.doc-content .code-header .filename {
  font-size: 0.75rem;
  color: var(--color-neutral-600);
}
.doc-content .hljs-comment, .doc-content .hljs-quote {
  color: var(--color-neutral-500);
  font-style: italic;
}
.doc-content .hljs-keyword, .doc-content .hljs-selector-tag, .doc-content .hljs-literal, .doc-content .hljs-doctag {
  color: var(--color-primary-400);
}
.doc-content .hljs-string, .doc-content .hljs-regexp, .doc-content .hljs-addition {
  color: var(--color-secondary-400);
}
.doc-content .hljs-number, .doc-content .hljs-symbol, .doc-content .hljs-bullet, .doc-content .hljs-meta {
  color: var(--color-secondary-500);
}
.doc-content .hljs-title, .doc-content .hljs-section, .doc-content .hljs-name {
  color: var(--color-tertiary-400);
}
.doc-content .hljs-attr, .doc-content .hljs-attribute, .doc-content .hljs-variable, .doc-content .hljs-template-variable, .doc-content .hljs-type, .doc-content .hljs-built_in, .doc-content .hljs-selector-class, .doc-content .hljs-selector-id {
  color: var(--color-tertiary-500);
}
.doc-content .hljs-deletion {
  color: var(--color-error-400);
}
.doc-content .hljs-emphasis {
  font-style: italic;
}
.doc-content .hljs-strong {
  font-weight: 600;
}
.doc-content blockquote {
  border-left: 1px solid var(--color-neutral-400);
  margin: var(--spacing-large) 0;
  padding-left: var(--spacing-medium);
  font-style: italic;
  color: var(--color-neutral-700);
}
.doc-content .alert {
  border: 1px solid;
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-large) 0;
}
.doc-content .alert p {
  margin: 0;
}
.doc-content .alert p + p {
  margin-top: var(--spacing-extra-small);
}
.doc-content .alert .alert-title {
  font-family: var(--font-sans);
  font-weight: 600;
  margin-bottom: var(--spacing-extra-small);
}
.doc-content .alert-info {
  background: var(--color-information-100);
  border-color: var(--color-information-300);
}
.doc-content .alert-info .alert-title {
  color: var(--color-information-800);
}
.doc-content .alert-success {
  background: var(--color-success-100);
  border-color: var(--color-success-300);
}
.doc-content .alert-success .alert-title {
  color: var(--color-success-800);
}
.doc-content .alert-warn {
  background: var(--color-alert-100);
  border-color: var(--color-alert-300);
}
.doc-content .alert-warn .alert-title {
  color: var(--color-alert-800);
}
.doc-content .alert-error {
  background: var(--color-error-100);
  border-color: var(--color-error-300);
}
.doc-content .alert-error .alert-title {
  color: var(--color-error-800);
}
.doc-content table {
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
  font-family: var(--font-sans);
  font-size: 0.9375rem;
  line-height: 1.5;
}
.doc-content th, .doc-content td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}
.doc-content td {
  font-variant-numeric: tabular-nums;
}
.doc-content tbody tr:last-child td {
  border-bottom: none;
}
.doc-content tbody tr:hover td {
  background: var(--color-neutral-100);
}
.doc-content th {
  background: var(--color-neutral-200);
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}
.mermaid-wrapper {
  margin: var(--spacing-large) 0;
  padding: var(--spacing-medium);
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  cursor: zoom-in;
  text-align: center;
}
.mermaid-wrapper .mermaid svg {
  max-width: 100%;
  height: auto;
}
.lightbox-overlay {
  display: none;
  position: fixed;
  inset: 0;
  z-index: var(--z-component-modal);
  background: var(--color-overlay);
  align-items: center;
  justify-content: center;
  padding: var(--spacing-large);
  cursor: zoom-out;
}
.lightbox-overlay.open {
  display: flex;
}
.lightbox-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 90vw;
  max-height: 90vh;
  overflow: auto;
  background: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
}
.lightbox-overlay .lightbox-content svg {
  display: block;
  width: 100%;
  height: auto;
}
.lightbox-close {
  position: absolute;
  top: var(--spacing-large);
  right: var(--spacing-large);
  background: none;
  border: none;
  color: var(--color-neutral-000);
  font-size: 2rem;
  line-height: 1;
  cursor: pointer;
}
.appendix-entry {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: var(--spacing-medium) 0;
  padding: 0 var(--spacing-medium);
  overflow: hidden;
}
.appendix-entry summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-family: var(--font-sans);
  font-weight: 600;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}
.appendix-entry summary::-webkit-details-marker {
  display: none;
}
.appendix-entry summary:hover {
  background: var(--color-primary-100);
}
.appendix-entry summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}
.appendix-entry summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}
.appendix-entry[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}
.appendix-entry summary .heading-number {
  color: var(--color-primary-600);
}
.appendix-entry[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
  margin-bottom: var(--spacing-small);
}
.appendix-entry[open] {
  padding-bottom: var(--spacing-small);
}
.appendix-entry > :last-child {
  margin-bottom: 0;
}
@media print {
  .doc-toc, .lightbox-overlay {
    display: none;
  }
}
@media (prefers-reduced-motion: reduce) {
  .toc a, .appendix-entry summary, .appendix-entry summary::after, .changelog summary, .changelog summary::after {
    transition: none;
  }
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
    }
  }
}

  </style>
</head>
<body>
  <header class="doc-header bg-[var(--color-tertiary-900)] text-[var(--color-neutral-000)] px-8 pt-8 pb-6 border-b-4 border-[var(--color-primary-600)]">
    <span class="doc-logo"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="32" viewBox="0 0 122 32" fill="none" role="img" aria-label="mashay">
  <rect x="0" y="8" width="16" height="16" rx="3" fill="#0c7e96" />
  <text x="24" y="23" font-family="'Segoe UI', system-ui, sans-serif" font-size="22" font-weight="700" letter-spacing="0.2" fill="#ffffff">mashay</text>
</svg>
</span>
    <div class="doc-eyebrow"><span class="status-badge">Draft</span></div>
    <h1 class="doc-title">A Field Guide to Coffee Brewing</h1>
    <p class="doc-subtitle">How grind size, water, and time shape a cup across common brewing methods.</p>
    <div class="doc-info-grid"><div class="doc-info-item"><span class="label">Version</span><span class="value">1.1</span></div><div class="doc-info-item"><span class="label">Date</span><span class="value">13 July 2026</span></div><div class="doc-info-item"><span class="label">Author</span><span class="value">Jane Researcher</span></div><div class="doc-info-item"><span class="label">Reviewers</span><span class="value">Jane Doe, John Smith</span></div><div class="doc-info-item"><span class="label">Classification</span><span class="value">Public</span></div></div>
  </header>

  <div class="doc-layout flex flex-col md:flex-row md:items-start gap-8 max-w-[72rem] mx-auto px-8">
    <aside class="doc-toc md:sticky md:top-8 md:shrink-0 md:grow-0 md:basis-56 md:w-56 md:max-h-[calc(100vh-4rem)] md:overflow-y-auto"><nav class="toc"><p class="toc-label">Contents</p><ul><li><a href="#introduction"><span class="toc-number">1</span> Introduction</a></li><li><a href="#the-variables"><span class="toc-number">2</span> The Variables</a><ul><li><a href="#how-the-levers-interact"><span class="toc-number">2.1</span> How the levers interact</a></li></ul></li><li><a href="#brewing-methods"><span class="toc-number">3</span> Brewing Methods</a><ul><li><a href="#percolation-methods"><span class="toc-number">3.1</span> Percolation methods</a></li><li><a href="#immersion-methods"><span class="toc-number">3.2</span> Immersion methods</a></li></ul></li><li><a href="#conclusion"><span class="toc-number">4</span> Conclusion</a></li></ul></nav><nav class="toc toc-appendix"><p class="toc-label">Appendix</p><ul><li><a href="#methodology"><span class="toc-number">A</span> Methodology</a></li><li><a href="#glossary"><span class="toc-number">B</span> Glossary</a></li></ul></nav></aside>

    <main class="doc flex-1 min-w-0 max-w-[44rem] py-12">
      <details class="changelog"><summary>Revision History</summary><table><thead><tr><th>Version</th><th>Date</th><th>Description</th></tr></thead><tbody><tr><td>1.1</td><td>13 July 2026</td><td>Added the extraction timing script and immersion notes.</td></tr><tr><td>1.0</td><td>1 June 2026</td><td>Initial release.</td></tr></tbody></table></details>
      <article class="doc-content prose max-w-none">
        <h2 id="introduction"><span class="heading-number">1. </span>Introduction</h2>
<p>Brewing coffee is the controlled extraction of soluble compounds from ground beans using hot water. Three variables dominate the result: grind size, water temperature, and contact time. This guide surveys the common methods and how each balances those variables.</p>
<h2 id="the-variables"><span class="heading-number">2. </span>The Variables</h2>
<p>Every method is a different way of trading the same three levers against one another.</p>
<ul>
<li><strong>Grind size</strong> — finer grinds extract faster but resist water flow.</li>
<li><strong>Water temperature</strong> — hotter water extracts more, up to the point of bitterness.</li>
<li><strong>Contact time</strong> — longer steeping pulls more solubles into the cup.</li>
</ul>
<h3 id="how-the-levers-interact"><span class="heading-number">2.1. </span>How the levers interact</h3>
<p>A coarse grind with a long steep can match the strength of a fine grind with a short one. The method you choose largely fixes two of the levers and leaves you to tune the third.</p>
<h2 id="brewing-methods"><span class="heading-number">3. </span>Brewing Methods</h2>
<p>The families below cover most of what you will encounter at home.</p>
<h3 id="percolation-methods"><span class="heading-number">3.1. </span>Percolation methods</h3>
<p>Water passes through a bed of grounds once, driven by gravity or pressure. Pour-over and drip machines live here.</p>
<div class="mermaid-wrapper"><div class="mermaid">flowchart LR
    A[Hot water] --> B[Grounds bed]
    B --> C[Filter]
    C --> D[Cup]
</div></div>
<p>Extraction can be modelled as a simple function of the three levers. A small script makes the trade-offs concrete:</p>
<div class="code-block"><div class="code-header"><span class="lang">ts</span><span class="filename">extraction.ts</span></div><pre><code class="hljs language-ts"><span class="hljs-keyword">const</span> <span class="hljs-title function_">strength</span> = (<span class="hljs-params"><span class="hljs-attr">grind</span>: <span class="hljs-built_in">number</span>, <span class="hljs-attr">tempC</span>: <span class="hljs-built_in">number</span>, <span class="hljs-attr">seconds</span>: <span class="hljs-built_in">number</span></span>) =>
  (tempC / <span class="hljs-number">100</span>) * (seconds / <span class="hljs-number">240</span>) * (<span class="hljs-number">10</span> / grind);
</code></pre></div>
<h3 id="immersion-methods"><span class="heading-number">3.2. </span>Immersion methods</h3>
<p>Grounds steep in a fixed volume of water, then the two are separated. French press and cupping bowls work this way.</p>
<table>
<thead>
<tr>
<th>Method</th>
<th>Grind</th>
<th>Time</th>
</tr>
</thead>
<tbody>
<tr>
<td>Pour-over</td>
<td>Medium</td>
<td>3 min</td>
</tr>
<tr>
<td>French press</td>
<td>Coarse</td>
<td>4 min</td>
</tr>
<tr>
<td>Espresso</td>
<td>Fine</td>
<td>30 sec</td>
</tr>
</tbody>
</table>
<blockquote>
<p>A good cup is repeatable — write down what you did, or you are only guessing.</p>
</blockquote>
<div class="alert alert-info">
<p class="alert-title">Note</p>
<p>Times above are starting points; adjust to taste rather than treating them as fixed.</p>
</div>
<div class="alert alert-info">
<p class="alert-title">Tip</p>
<p>Weigh your beans and water. A 1:16 ratio of coffee to water is a reliable place to begin.</p>
</div>
<div class="alert alert-info">
<p class="alert-title">Important</p>
<p>Water is most of the cup. Filtered water with moderate mineral content extracts far better than distilled.</p>
</div>
<div class="alert alert-warn">
<p class="alert-title">Warning</p>
<p>Water above roughly 96 degrees Celsius scalds the grounds and pulls harsh, bitter notes.</p>
</div>
<div class="alert alert-warn">
<p class="alert-title">Caution</p>
<p>A sealed brewer under pressure can release scalding water suddenly — vent it before opening.</p>
</div>
<h2 id="conclusion"><span class="heading-number">4. </span>Conclusion</h2>
<p>No single method is best; each fixes a different pair of levers. Start from the <a href="#brewing-methods">Brewing Methods</a> that suits your equipment, then tune the remaining variable. See the <a href="#glossary">Glossary</a> for the terms used throughout.</p>
<h2 id="appendix">Appendix</h2>
<details class="appendix-entry"><summary><span class="heading-number">A. </span>Methodology</summary>
<p>Timings and ratios were compiled from repeated home brews across a single roast, holding the roast date and water source constant so that only the method varied.</p>
</details><details class="appendix-entry"><summary><span class="heading-number">B. </span>Glossary</summary>
<ul>
<li><strong>Extraction</strong> — the dissolving of soluble compounds from ground coffee into water.</li>
<li><strong>Immersion</strong> — a brewing style in which grounds steep in a fixed volume of water before separation.</li>
<li><strong>Percolation</strong> — a brewing style in which water passes once through a bed of grounds.</li>
</ul></details>
      </article>
    </main>
  </div>

  <footer class="doc-footer text-center text-[var(--color-neutral-600)] text-[0.8rem] p-8 border-t border-[var(--color-neutral-300)]">
    <p>Built with mashay</p>
  </footer>

  <div id="mermaid-lightbox" class="lightbox-overlay">
    <button type="button" class="lightbox-close" aria-label="Close">&times;</button>
    <div class="lightbox-content"></div>
  </div>

  <script src="https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.min.js"></script>
<script>mermaid.initialize({ startOnLoad: true, securityLevel: "strict" });</script>
  <script>
    document.addEventListener("click", function (e) {
      var wrapper = e.target.closest(".mermaid-wrapper");
      var overlay = document.getElementById("mermaid-lightbox");
      if (wrapper) {
        var svg = wrapper.querySelector("svg");
        if (svg) {
          var clone = svg.cloneNode(true);
          clone.removeAttribute("width");
          clone.removeAttribute("height");
          clone.removeAttribute("style");
          clone.style.width = "100%";
          clone.style.height = "auto";
          var content = overlay.querySelector(".lightbox-content");
          content.innerHTML = "";
          content.appendChild(clone);
          overlay.classList.add("open");
        }
        return;
      }
      if (e.target.closest(".lightbox-close") || e.target === overlay) {
        overlay.classList.remove("open");
      }
    });
    document.addEventListener("keydown", function (e) {
      if (e.key === "Escape") {
        document.getElementById("mermaid-lightbox").classList.remove("open");
      }
    });
  </script>
</body>
</html>
"
`;
